@@ -2,10 +2,20 @@
 CHANGE LOG
 =========================================================================
 
+2011-12-16 Jason Vertrees <Jason.Vertrees@schrodinger.com>
+
+	* fixed object creation when merging two objects; thanks to James
+	Davidson for pointing out the error
+
 2011-12-06 Jason Vertrees <Jason.Vertrees@schrodinger.com>
 
 	* fixed get_mass
 	
+2011-12-05 Jason Vertrees <Jason.Vertrees@schrodinger.com>
+
+	* fixed create to reorder IDs when combining objects; thanks to James
+	Davidson.
+
 2011-12-05 Jason Vertrees <Jason.Vertrees@schrodinger.com>
 
 	* Cleaned up 'fitting.py' (untabified)
